--- a/templates/kinsdb/upload_data.html
+++ b/templates/kinsdb/upload_data.html
@@ -7,25 +7,20 @@
 {% endblock extra_css %}
 
 {% block content %}
-
-{% if form %}
-{% else %}
 <section class="section">
   <div class="container">
     <div class="row">
       <h1>DATA UPLOAD</h1>
-
-      중복항목 {{ count }}개를 제외한 데이터가 업로드 완료되었습니다.<br>
-
-      <li>{{ uploaded }}</li>
-      <li>{{ failed }}</li>
-      <di>
-      <button type="button" class="btn btn-primary float-end" onclick=location.href="{% url 'brnc' %}">홈으로</button>
-
+      {% if form %}
+      업로드 완료
+      {{ form }}
+      {% else %}
+      업로드 실패
+      {{ form }}
+      {% endif %}
     </div>
   </div>
 </section>
-{% endif %}
 {% endblock content %}
 {% block javascript %}
 {% endblock javascript %}
