docs wordcloud img

--- a/templates/kinsdb/Analysis/read_data.html
+++ b/templates/kinsdb/Analysis/read_data.html
@@ -21,6 +21,7 @@
       <li>{{ failed }}</li>
       <di>
       <button type="button" class="btn btn-primary float-end" onclick=location.href="{% url 'brnc' %}">홈으로</button>
+      <img src="{{ wc }}" alt="11">
 
     </div>
   </div>
