--- a/templates/kinsdb/docs-detail.html
+++ b/templates/kinsdb/docs-detail.html
@@ -124,7 +124,7 @@
 
           <div class="candidate-contact-details card-body p-4 border-top">
             <h6 class="fs-17 fw-semibold mb-3">연관 키워드</h6>
-            <img src="{% static 'images/brnc/60.1_textmining.png' %}" alt="" style="object-fit:cover;width:100%">
+            <img src="{{ doc.wc }}" alt="" style="object-fit:cover;width:100%">
 
 
 
