--- a/templates/cloud/bulletin/folder-list.html
+++ b/templates/cloud/bulletin/folder-list.html
@@ -20,7 +20,7 @@
     padding: 8px 14px;
     border-radius: 4px;
     margin-bottom: 14px;
-    box-shadow: 0.075rem 1.5rem rgba(49, 64, 71, .03)
+    box-shadow: 0 0.75rem 1.5rem rgba(49, 64, 71, .03);
   }
 </style>
 <section class="page-title-box">
