--- a/templates/kinsdb/Analysis/read_data.html
+++ b/templates/kinsdb/Analysis/read_data.html
@@ -7,13 +7,35 @@
 {% endblock extra_css %}
 
 {% block content %}
+<section class="page-title-box">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="text-center text-white">
+          <h3 class="mb-4"> 데이터 업로드 </h3>
+
+        </div>
+      </div>
+      <!--end col-->
+    </div>
+    <!--end row-->
+  </div>
+  <!--end container-->
+</section>
+<div class="position-relative" style="z-index: 1">
+  <div class="shape">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250">
+      <path fill="#FFFFFF" fill-opacity="1" d="M0,192L120,202.7C240,213,480,235,720,234.7C960,235,1200,213,1320,202.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path>
+    </svg>
+  </div>
+</div>
 
 {% if form %}
 {% else %}
 <section class="section">
   <div class="container">
     <div class="row">
-      <h1>DATA UPLOAD</h1>
+      <h1>DATA UPLOAD SUCCEED</h1>
 
       중복항목 {{ count }}개를 제외한 데이터가 업로드 완료되었습니다.<br>
 
@@ -21,7 +43,6 @@
       <li>{{ failed }}</li>
       <di>
       <button type="button" class="btn btn-primary float-end" onclick=location.href="{% url 'brnc' %}">홈으로</button>
-      <img src="{{ wc }}" alt="11">
 
     </div>
   </div>
