--- a/templates/rnd/index.html
+++ b/templates/rnd/index.html
@@ -62,9 +62,8 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-6">
                                     <div class="section-title text-center mb-5">
-                                        <h3 class="title mb-3">Quick Career Tips</h3>
-                                        <p class="text-muted">Post a job to tell us about your project. We'll quickly match you with the
-                                            right freelancers.</p>
+                                        <h3 class="title mb-3">Quick Menu</h3>
+                                        <p class="text-muted">R&D 지원사업과 관련된 최신 포스트를 확인할 수 있습니다.</p>
                                     </div>
                                 </div>
                                 <!--end col-->
@@ -91,12 +90,12 @@
                                             </div>
                                         </div>
                                         <div class="card-body">
-                                            <a href="{% url 'blog-details' %}" class="primary-link">
-                                                <h5 class="fs-17">How apps is the IT world ?</h5>
+                                            <a href="#" class="primary-link">
+                                                <h5 class="fs-17">제목1</h5>
                                             </a>
                                             <p class="text-muted">The final text is not yet avaibookmark-label. Dummy texts have Internet tend
                                                 been in use by typesetters since century.</p>
-                                            <a href="{% url 'blog-details' %}" class="form-text text-primary">Read more <i class="mdi mdi-chevron-right align-middle"></i></a>
+                                            <a href="#" class="form-text text-primary">더보기<i class="mdi mdi-chevron-right align-middle"></i></a>
                                         </div>
                                     </div><!--end blog-box-->
                                 </div><!--end col-->
@@ -121,12 +120,12 @@
                                             </div>
                                         </div>
                                         <div class="card-body">
-                                            <a href="{% url 'blog-details' %}" class="primary-link">
-                                                <h5 class="fs-17">Smartest Applications for Business ?</h5>
+                                            <a href="#" class="primary-link">
+                                                <h5 class="fs-17">제목2</h5>
                                             </a>
                                             <p class="text-muted">Due to its widespread use as filler text for layouts, non-readability
                                                 is of great importance: human perception.</p>
-                                            <a href="{% url 'blog-details' %}" class="form-text text-primary">Read more <i class="mdi mdi-chevron-right align-middle"></i></a>
+                                            <a href="#" class="form-text text-primary">더보기<i class="mdi mdi-chevron-right align-middle"></i></a>
                                         </div>
                                     </div><!--end blog-box-->
                                 </div><!--end col-->
@@ -150,12 +149,12 @@
                                             </div>
                                         </div>
                                         <div class="card-body">
-                                            <a href="{% url 'blog-details' %}" class="primary-link">
-                                                <h5 class="fs-17">Design your apps in your own way ?</h5>
+                                            <a href="#" class="primary-link">
+                                                <h5 class="fs-17">제목3</h5>
                                             </a>
                                             <p class="text-muted">One disadvantage of Lorum Ipsum is that in Latin certain letters
                                                 appear more frequently than others.</p>
-                                            <a href="{% url 'blog-details' %}" class="form-text text-primary">Read more <i class="mdi mdi-chevron-right align-middle"></i></a>
+                                            <a href="#" class="form-text text-primary">더보기<i class="mdi mdi-chevron-right align-middle"></i></a>
                                         </div>
                                     </div><!--end blog-box-->
                                 </div><!--end col-->
