--- a/templates/cloud/bulletin/file-list.html
+++ b/templates/cloud/bulletin/file-list.html
@@ -81,52 +81,11 @@
     <!--end row-->
     <div class="row">
       <div class="col-lg-12">
-        <div class="job-box card mt-4" onclick=location.href="{% url 'file_detail' %}">
-          <div class="card-body p-4">
-            <div class="row">
-              <div class="col-lg-1">
-                <a href="company-details.html"><img src="{% static 'images/featured-job/img-01.png' %}" alt="" class="img-fluid rounded-3"></a>
-              </div>
-              <!--end col-->
-              <div class="col-lg-9">
-                <div class="mt-3 mt-lg-0">
-                  <h5 class="fs-17 mb-1"><a href="{% url 'file_detail' %}" class="text-dark">제목</a></h5>
-                  <ul class="list-inline mb-0">
-                    <li class="list-inline-item">
-                      <p class="text-muted fs-14 mb-0"><i class="uil uil-edit"></i> 작성자명</p>
-                    </li>
-                    <li class="list-inline-item">
-                      <p class="text-muted fs-14 mb-0"><i class="uil uil-calender"></i> 2023.06.27</p>
-                    </li>
-                  </ul>
-                  <div class="mt-2">
-                    <span class="badge bg-soft-danger mt-1">파일명1</span>
-                    <span class="badge bg-soft-warning mt-1">파일명2</span>
-                  </div>
-                </div>
-              </div>
-              <!--end col-->
-              <div class="col-lg-2 align-self-center">
-                <ul class="list-inline mt-3 mb-0">
-                  <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit">
-                    <a href="{% url 'file_update' %}" class="avatar-sm bg-soft-success d-inline-block text-center rounded-circle fs-18">
-                      <i class="uil uil-edit"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete">
-                    <a href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#deleteModal" class="avatar-sm bg-soft-danger d-inline-block text-center rounded-circle fs-18">
-                      <i class="uil uil-trash-alt"></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <!--end col-->
-            </div>
-            <!--end row-->
-          </div>
-        </div>
+        {% for post in posts %}
+        {% include 'cloud/partials/post_card.html' %}
+        {% endfor %}
         <!--end job-box-->
-        <div class="job-box card mt-4" onclick=location.href="{% url 'file_detail' %}">
+        <div class="job-box card mt-4" onclick=location.href="{% url 'file_detail' post_id=1 %}">
           <div class="card-body p-4">
             <div class="row">
               <div class="col-lg-1">
