--- a/templates/cloud/bulletin/file-detail.html
+++ b/templates/cloud/bulletin/file-detail.html
@@ -87,98 +87,9 @@
             <div class="">
               <h6 class="fs-17 fw-bold mb-0">세부 내용</h6>
 
-
-              <div class="candidate-education-content mt-4 d-flex pb-4 border-bottom">
-                <div class="circle flex-shrink-0 bg-soft-primary" style="font-size:12px;"> 2 </div>
-
-                <div class="d-flex flex-column align-items-stretch w-100">
-                  <div class="ms-4">
-                    <div class="d-flex">
-                      <h6 class="fs-16 mb-1">필드 수정</h6>
-                      <p class="fs-12 text-muted mb-0 mx-2">23.06.28 00:00:00</p>
-                    </div>
-                    <p class="text-muted">데이터베이스 검색을 위한 제목 필드 수정 완료하였습니다.</p>
-                  </div>
-                  <ul class="profile-document list-unstyled mb-0">
-                    <li>
-                      <div class="profile-document-list document-list-colored ms-4 d-flex align-items-center mt-2">
-                        <div class="icon flex-shrink-0">
-                          <i class="uil uil-file"></i>
-                        </div>
-                        <div class="ms-3">
-                          <h6 class="fs-16 mb-0">filename3.pdf</h6>
-                          <p class="text-muted mb-0">1.25 MB</p>
-                        </div>
-                        <div class="ms-auto">
-                          <a href="{% static 'images/dark-logo.png' %}" download class="fs-20 text-muted"><i class="uil uil-import"></i></a>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="profile-document-list document-list-colored ms-4 d-flex align-items-center mt-2">
-                        <div class="icon flex-shrink-0">
-                          <i class="uil uil-file"></i>
-                        </div>
-                        <div class="ms-3">
-                          <h6 class="fs-16 mb-0">filename2s.pdf</h6>
-                          <p class="text-muted mb-0">1.25 MB</p>
-                        </div>
-                        <div class="ms-auto">
-                          <a href="{% static 'images/dark-logo.png' %}" download class="fs-20 text-muted"><i class="uil uil-import"></i></a>
-                        </div>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-
-              </div>
-
-
-              <div class="candidate-education-content mt-4 d-flex pb-4 border-bottom">
-                <div class="circle flex-shrink-0 bg-soft-primary" style="font-size:12px;"> 1 </div>
-
-                <div class="d-flex flex-column align-items-stretch w-100">
-                  <div class="ms-4">
-                    <div class="d-flex">
-                      <h6 class="fs-16 mb-1">초안 업로드</h6>
-                      <p class="fs-12 text-muted mb-0 mx-2">23.06.07 12:41:00</p>
-                    </div>
-                    <p class="text-muted">6월 데이터 업데이트</p>
-                  </div>
-                  <ul class="profile-document list-unstyled mb-0">
-                    <li>
-                      <div class="profile-document-list document-list-colored ms-4 d-flex align-items-center mt-2">
-                        <div class="icon flex-shrink-0">
-                          <i class="uil uil-file"></i>
-                        </div>
-                        <div class="ms-3">
-                          <h6 class="fs-16 mb-0">filename1.pdf</h6>
-                          <p class="text-muted mb-0">1.25 MB</p>
-                        </div>
-                        <div class="ms-auto">
-                          <a href="{% static 'images/dark-logo.png' %}" download class="fs-20 text-muted"><i class="uil uil-import"></i></a>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="profile-document-list document-list-colored ms-4 d-flex align-items-center mt-2">
-                        <div class="icon flex-shrink-0">
-                          <i class="uil uil-file"></i>
-                        </div>
-                        <div class="ms-3">
-                          <h6 class="fs-16 mb-0">filename1.docx</h6>
-                          <p class="text-muted mb-0">1.25 MB</p>
-                        </div>
-                        <div class="ms-auto">
-                          <a href="{% static 'images/dark-logo.png' %}" download class="fs-20 text-muted"><i class="uil uil-import"></i></a>
-                        </div>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-
-              </div>
-
+              {% for log in logs %}
+              {% include 'cloud/partials/history_card.html' %}
+              {% endfor %}
               <div class="candidate-education-content mt-4 d-flex">
                 <div class="circle flex-shrink-0 bg-soft-primary" style="font-size:12px;"> 0 </div>
 
@@ -192,7 +103,6 @@
                   </div>
 
                 </div>
-
               </div>
 
               <!--end candidate-educat`ion-details-->
