--- a/templates/cloud/bulletin/file-update.html
+++ b/templates/cloud/bulletin/file-update.html
@@ -4,7 +4,12 @@
 {% block extra_css %}
 <!-- Choise Css -->
 <link rel="stylesheet" href="{% static 'libs/choices.js/public/assets/styles/choices.min.css' %}">
-
+<style>
+.candidate-education-content::before {
+  height: -webkit-fill-available !important;
+  bottom: 30px;
+}
+</style>
 {% endblock extra_css %}
 {% block content %}
 <!-- Start home -->
@@ -102,7 +107,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="mb-4">
-              <label for="jobtitle" class="form-label">수정내용</label>
+              <label for="jobtitle" class="form-label">세부제목</label>
               <input type="text" class="form-control" id="jobtitle" placeholder="">
             </div>
           </div>
@@ -142,45 +147,29 @@
                 <div class="circle flex-shrink-0 bg-soft-primary" style="font-size:12px;"> 2 </div>
 
                 <div class="d-flex flex-column align-items-stretch w-100">
-                  <div class="ms-4">
-                    <div class="d-flex justify-content-between">
-                      <div class="d-flex">
-                      <h6 class="fs-16 mb-1">필드 수정</h6>
-                      <p class="fs-12 text-muted mb-0 mx-2">23.06.28 00:00:00</p>
-                      </div>
-                      <i class="mdi mdi-dots-vertical" id="dropdownMenuUpdate" data-bs-toggle="dropdown" aria-expanded="false"></i>
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuUpdate">
-                      <li><a class="dropdown-item" href="javascript:void(0)">수정</a></li>
-                      <li><a class="dropdown-item" href="javascript:void(0)">삭제</a></li>
-                      </ul>
+                  <div class="row ms-4">
+                    <div class="col-lg-12">
+                      <h6 class="fs-16 mb-1">수정 중</h6>
                     </div>
-
-                    <p class="text-muted">데이터베이스 검색을 위한 제목 필드 수정 완료하였습니다.</p>
+                    <div class="col-lg-6">
+                      <div class="mb-4">
+                        <label for="jobtitle" class="form-label">세부제목</label>
+                        <input type="text" class="form-control" id="jobtitle" value="필드 수정">
+                      </div>
+                    </div>
+                    <div class="col-lg-6">
+                      <div class="mb-4">
+                        <label for="jobtitle" class="form-label">파일 추가</label>
+                        <input type="file" class="form-control" id="jobtitle" placeholder="">
+                      </div>
+                    </div>
+                    <div class="col-lg-12">
+                      <div class="mb-4">
+                        <label for="jobtitle" class="form-label">상세설명</label>
+                        <input type="text" class="form-control" id="jobtitle" value="데이터베이스 업로드를 위한 초안 업데이트 완료하였습니다.">
+                      </div>
+                    </div>
                   </div>
-                  <ul class="profile-document list-unstyled mb-0">
-                    <li>
-                      <div class="profile-document-list document-list-colored ms-4 d-flex align-items-center mt-2">
-                        <div class="icon flex-shrink-0">
-                          <i class="uil uil-file"></i>
-                        </div>
-                        <div class="ms-3">
-                          <h6 class="fs-16 mb-0">filename3.pdf</h6>
-                          <p class="text-muted mb-0">1.25 MB</p>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="profile-document-list document-list-colored ms-4 d-flex align-items-center mt-2">
-                        <div class="icon flex-shrink-0">
-                          <i class="uil uil-file"></i>
-                        </div>
-                        <div class="ms-3">
-                          <h6 class="fs-16 mb-0">filename2.pdf</h6>
-                          <p class="text-muted mb-0">1.25 MB</p>
-                        </div>
-                      </div>
-                    </li>
-                  </ul>
                 </div>
 
               </div>
@@ -193,13 +182,13 @@
                   <div class="ms-4">
                     <div class="d-flex justify-content-between">
                       <div class="d-flex">
-                      <h6 class="fs-16 mb-1">초안 업로드</h6>
-                      <p class="fs-12 text-muted mb-0 mx-2">23.06.07 12:41:00</p>
+                        <h6 class="fs-16 mb-1">초안 업로드</h6>
+                        <p class="fs-12 text-muted mb-0 mx-2">23.06.07 12:41:00</p>
                       </div>
                       <i class="mdi mdi-dots-vertical" id="dropdownMenuUpdate" data-bs-toggle="dropdown" aria-expanded="false"></i>
                       <ul class="dropdown-menu" aria-labelledby="dropdownMenuUpdate">
-                      <li><a class="dropdown-item" href="#">수정</a></li>
-                      <li><a class="dropdown-item" href="javascript:void(0)">삭제</a></li>
+                        <li><a class="dropdown-item" href="#">수정</a></li>
+                        <li><a class="dropdown-item" href="javascript:void(0)">삭제</a></li>
                       </ul>
                     </div>
                     <p class="text-muted">6월 데이터 업데이트</p>
@@ -256,7 +245,7 @@
           <!--end card-->
         </div>
       </div>
-      </div>
+    </div>
   </div>
   <!--end container-->
 </section>
