--- a/templates/cloud/bulletin/file-upload.html
+++ b/templates/cloud/bulletin/file-upload.html
@@ -54,6 +54,7 @@
                                                 <h5 class="mb-0 fs-17">게시글을 작성하여 파일을 업로드하세요!</h5>
                                         </div>
                                     </div><!--end col-->
+                                    {{ form }}
                                 </div><!--end row-->
                                 <form action="#" class="job-post-form shadow mt-4">
                                     <div class="job-post-content box-shadow-md rounded-3 p-4">
@@ -76,6 +77,7 @@
                                                     <input type="email" class="form-control" id="email" placeholder="1234@gmail.com" disabled>
                                                 </div>
                                             </div><!--end col-->
+
                                             <div class="col-lg-6">
                                                 <div class="mb-4">
                                                     <label for="phoneNumber" class="form-label">연락처</label>
