--- a/templates/cloud/bulletin/file-upload.html
+++ b/templates/cloud/bulletin/file-upload.html
@@ -2,145 +2,158 @@
 {% load static %}
 {% block title %}Candidate List{% endblock title %}
 {% block extra_css %}
-        <!-- Choise Css -->
-        <link rel="stylesheet" href="{% static 'libs/choices.js/public/assets/styles/choices.min.css' %}">
+<!-- Choise Css -->
+<link rel="stylesheet" href="{% static 'libs/choices.js/public/assets/styles/choices.min.css' %}">
 
 {% endblock extra_css %}
 {% block content %}
-                    <!-- Start home -->
-                    <section class="page-title-box">
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-md-6">
-                                    <div class="text-center text-white">
-                                        <h3 class="mb-4">Manage Job Post</h3>
-                                        <div class="page-next">
-                                            <nav class="d-inline-block" aria-label="breadcrumb text-center">
-                                                <ol class="breadcrumb justify-content-center">
-                                                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                                    <li class="breadcrumb-item"><a href="javascript:void(0)">Manage Jobs</a></li>
-                                                    <li class="breadcrumb-item active" aria-current="page"> Manage Job Post </li>
-                                                </ol>
-                                            </nav>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--end col-->
-                            </div>
-                            <!--end row-->
-                        </div>
-                        <!--end container-->
-                    </section>
-                    <!-- end home -->
+<!-- Start home -->
+<section class="page-title-box">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="text-center text-white">
+          <h3 class="mb-4">Manage Job Post</h3>
+          <div class="page-next">
+            <nav class="d-inline-block" aria-label="breadcrumb text-center">
+              <ol class="breadcrumb justify-content-center">
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="javascript:void(0)">Manage Jobs</a></li>
+                <li class="breadcrumb-item active" aria-current="page"> Manage Job Post </li>
+              </ol>
+            </nav>
+          </div>
+        </div>
+      </div>
+      <!--end col-->
+    </div>
+    <!--end row-->
+  </div>
+  <!--end container-->
+</section>
+<!-- end home -->
 
-                    <!-- START SHAPE -->
-                    <div class="position-relative" style="z-index: 1">
-                        <div class="shape">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250">
-                                <path fill="#FFFFFF" fill-opacity="1"
-                                    d="M0,192L120,202.7C240,213,480,235,720,234.7C960,235,1200,213,1320,202.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path>
-                            </svg>
-                        </div>
-                    </div>
-                    <!-- END SHAPE -->
+<!-- START SHAPE -->
+<div class="position-relative" style="z-index: 1">
+  <div class="shape">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250">
+      <path fill="#FFFFFF" fill-opacity="1" d="M0,192L120,202.7C240,213,480,235,720,234.7C960,235,1200,213,1320,202.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path>
+    </svg>
+  </div>
+</div>
+<!-- END SHAPE -->
 
 
-                        <!-- START JOBS-POST-EDIT -->
-                        <section class="section">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        <div class="bg-soft-primary p-3">
-                                                <h5 class="mb-0 fs-17">게시글을 작성하여 파일을 업로드하세요!</h5>
-                                        </div>
-                                    </div><!--end col-->
-                                    {{ form }}
-                                </div><!--end row-->
-                                <form action="#" class="job-post-form shadow mt-4">
-                                    <div class="job-post-content box-shadow-md rounded-3 p-4">
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <div class="mb-4">
-                                                    <label for="jobtitle" class="form-label">제목</label>
-                                                    <input type="text" class="form-control" id="jobtitle" placeholder="Title">
-                                                </div>
-                                            </div><!--end col-->
-                                            <div class="col-lg-12">
-                                                <div class="mb-4">
-                                                    <label for="jobdescription" class="form-label">설명</label>
-                                                    <textarea class="form-control" id="jobdescription" rows="3" placeholder="Description"></textarea>
-                                                </div>
-                                            </div><!--end col-->
-                                            <div class="col-lg-6">
-                                                <div class="mb-4">
-                                                    <label for="email" class="form-label">작성자</label>
-                                                    <input type="email" class="form-control" id="email" placeholder="1234@gmail.com" disabled>
-                                                </div>
-                                            </div><!--end col-->
+<!-- START JOBS-POST-EDIT -->
+<section class="section">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="bg-soft-primary p-3">
+          <h5 class="mb-0 fs-17">게시글을 작성하여 파일을 업로드하세요!</h5>
+        </div>
+      </div>
+      <!--end col-->
 
-                                            <div class="col-lg-6">
-                                                <div class="mb-4">
-                                                    <label for="phoneNumber" class="form-label">연락처</label>
-                                                    <input type="number" class="form-control" id="phoneNumber" placeholder="Tel">
-                                                </div>
-                                            </div><!--end col-->
-                                            <div class="col-lg-6">
-                                                <div class="mb-4">
-                                                    <label for="choices-single-categories" class="form-label">구분</label>
-                                                    <select class="form-select" data-trigger="" name="choices-single-categories" id="choices-single-categories" aria-label="Default select example">
-                                                        <option value="ne">KINS기관 제출 공문</option>
-                                                        <option value="df">참여기관 공유</option>
-                                                        <option value="od">회의일정 및 발표자료</option>
-                                                    </select>
-                                                </div>
-                                            </div><!--end col-->
-                                            <div class="col-lg-6">
-                                                <div class="mb-4">
-                                                    <label for="choices-single-categories" class="form-label">폴더명</label>
-                                                    <select class="form-select" data-trigger="" name="choices-single-categories" id="choices-single-categories" aria-label="Default select example">
-                                                        <option value="ne">과제협약</option>
-                                                        <option value="df">연구개발계획서</option>
-                                                        <option value="od">연차보고서</option>
-                                                        <option value="rd">중간보고서</option>
-                                                    </select>
-                                                </div>
-                                            </div><!--end col-->
-                                            <div class="col-lg-12">
+    </div>
+    <!--end row-->
+    {% if postform.errors %}
+    <span style="color: red;">{{ postform.errors }}</span>
+    {% endif %}
+
+    {% if postform.errors %}
+    <span style="color: blue;">{{ form.errors }}</span>
+    {% endif %}
+    <form method="post" class="job-post-form shadow mt-4">
+      {% csrf_token %}
+
+      <div class="job-post-content box-shadow-md rounded-3 p-4">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="mb-4">
+              <label for="jobtitle" class="form-label">제목</label>
+              {{ postform.title }}
+            </div>
+          </div>
+          <!--end col-->
+          <div class="col-lg-12">
+            <div class="mb-4">
+              <label for="jobdescription" class="form-label">설명</label>
+              {{ postform.description }}
+            </div>
+          </div>
+          <!--end col-->
+          <div class="col-lg-6">
+            <div class="mb-4">
+              <label for="email" class="form-label">작성자</label>
+              {{ postform.writer }}
+              <!-- <input type="email" class="form-control" id="email" placeholder="1234@gmail.com" disabled> -->
+            </div>
+          </div>
+          <!--end col-->
+
+          <div class="col-lg-6">
+            <div class="mb-4">
+              <label for="phoneNumber" class="form-label">연락처</label>
+              {{ postform.tel }}
+            </div>
+          </div>
+          <!--end col-->
+          <div class="col-lg-6">
+            <div class="mb-4">
+              <label for="choices-single-categories" class="form-label">구분</label>
+              {{ postform.sector }}
+            </div>
+          </div>
+          <!--end col-->
+          <div class="col-lg-6">
+            <div class="mb-4">
+              <label for="choices-single-categories" class="form-label">폴더명</label>
+              {{ postform.folder }}
+            </div>
+          </div>
+          <!--end col-->
+          <!-- <div class="col-lg-12">
                                                 <div class="mb-4">
                                                     <label for="lastdate" class="form-label">작성일자</label>
                                                     <input type="date" class="form-control" id="lastdate">
                                                 </div>
-                                            </div><!--end col-->
-                                            <div class="col-lg-12">
-                                                <div class="mb-4">
-                                                    <label for="lastdate" class="form-label">파일 업로드</label>
-                                                    <input type="file" class="form-control" id="file">
-                                                </div>
-                                            </div><!--end col-->
-                                            <div class="col-lg-12">
-                                                <div class="text-end">
-                                                    <a href="{% url 'file_list' %}" class="btn btn-success">뒤로가기</a>
-                                                    <a href="javascript:void(0)" class="btn btn-primary">업로드 <i class="mdi mdi-send"></i></a>
-                                                </div>
-                                            </div><!--end col-->
-                                        </div><!--end row-->
-                                    </div><!--end job-post-content-->
-                                </form>
-                            </div><!--end container-->
-                        </section>
-                        <!-- END JOBS-POST-EDIT -->
+                                            </div> -->
+          <!-- <div class="col-lg-12">
+            <div class="mb-4">
+              <label for="lastdate" class="form-label">파일 업로드</label>
+              {{ fileform.files }}
+            </div>
+          </div> -->
+          <!--end col-->
+          <div class="col-lg-12">
+            <div class="text-end">
+              <a href="{% url 'file_list' %}" class="btn btn-success">뒤로가기</a>
+              <button type="submit" class="btn btn-primary">업로드 <i class="mdi mdi-send"></i></button>
+            </div>
+          </div>
+          <!--end col-->
+        </div>
+        <!--end row-->
+      </div>
+      <!--end job-post-content-->
+    </form>
+  </div>
+  <!--end container-->
+</section>
+<!-- END JOBS-POST-EDIT -->
 {% endblock content %}
 {% block javascript %}
-        <!-- JAVASCRIPT -->
-        <script src="{% static 'libs/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
-        <script src="https://unicons.iconscout.com/release/v4.0.0/script/monochrome/bundle.js"></script>
+<!-- JAVASCRIPT -->
+<script src="{% static 'libs/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
+<script src="https://unicons.iconscout.com/release/v4.0.0/script/monochrome/bundle.js"></script>
 
 
-        <!-- Choice Js -->
-        <script src="{% static 'libs/choices.js/public/assets/scripts/choices.min.js' %}"></script>
+<!-- Choice Js -->
+<script src="{% static 'libs/choices.js/public/assets/scripts/choices.min.js' %}"></script>
 
-        <!-- Switcher Js -->
-        <script src="{% static 'js/pages/switcher.init.js' %}"></script>
+<!-- Switcher Js -->
+<script src="{% static 'js/pages/switcher.init.js' %}"></script>
 
-        <script src="{% static 'js/app.js' %}"></script>
+<script src="{% static 'js/app.js' %}"></script>
 {% endblock javascript %}
