--- a/templates/cloud/bulletin/file-detail.html
+++ b/templates/cloud/bulletin/file-detail.html
@@ -65,15 +65,15 @@
         <table class="table table-bordered">
           <tr>
             <th>제목</th>
-            <td>제목명</td>
+            <td>{{ post.title }}</td>
             <th>작성자</th>
-            <td>작성자명</td>
+            <td>{{ post.writer }}</td>
           </tr>
           <tr>
             <th>작성일자</th>
-            <td>2023.06.07</td>
+            <td>{{ post.creation_date }}</td>
             <th>최근 수정일</th>
-            <td>2023.06.28</td>
+            <td>{{ post.update_date }}</td>
           </tr>
 
         </table>
@@ -85,12 +85,13 @@
           <div class="card-body p-4 candidate-personal-detail">
 
             <div class="">
-              <h6 class="fs-17 fw-bold mb-0">세부 내용</h6>
+              <h6 class="fs-17 fw-bold mb-0">히스토리</h6>
 
               {% for log in logs %}
               {% include 'cloud/partials/history_card.html' %}
               {% endfor %}
-              <div class="candidate-education-content mt-4 d-flex">
+
+              <!-- <div class="candidate-education-content mt-4 d-flex">
                 <div class="circle flex-shrink-0 bg-soft-primary" style="font-size:12px;"> 0 </div>
 
                 <div class="d-flex flex-column align-items-stretch w-100">
@@ -103,7 +104,7 @@
                   </div>
 
                 </div>
-              </div>
+              </div> -->
 
               <!--end candidate-educat`ion-details-->
 
