--- a/templates/cloud/bulletin/file-upload.html
+++ b/templates/cloud/bulletin/file-upload.html
@@ -119,12 +119,12 @@
                                                     <input type="date" class="form-control" id="lastdate">
                                                 </div>
                                             </div> -->
-          <!-- <div class="col-lg-12">
+          <div class="col-lg-12">
             <div class="mb-4">
               <label for="lastdate" class="form-label">파일 업로드</label>
               {{ fileform.files }}
             </div>
-          </div> -->
+          </div>
           <!--end col-->
           <div class="col-lg-12">
             <div class="text-end">
