--- a/templates/cloud/partials/history_card.html
+++ b/templates/cloud/partials/history_card.html
@@ -1,6 +1,6 @@
 {% load static %}
-<div class="candidate-education-content mt-4 d-flex pb-4 border-bottom">
-  <div class="circle flex-shrink-0 bg-soft-primary" style="font-size:12px;"> {{ forloop.revcounter }} </div>
+<div class="candidate-education-content mt-4 d-flex pt-4 border-top">
+  <div class="circle flex-shrink-0 bg-soft-primary" style="font-size:12px;"> {{ forloop.revcounter|add:"-1"}} </div>
 
   <div class="d-flex flex-column align-items-stretch w-100">
     <div class="ms-4">
@@ -11,6 +11,7 @@
       <p class="text-muted">{{ log.description }}</p>
     </div>
     <ul class="profile-document list-unstyled mb-0">
+      {% for f in files %}
       <li>
         <div class="profile-document-list document-list-colored ms-4 d-flex align-items-center mt-2">
           <div class="icon flex-shrink-0">
